--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,8 @@ h1 {
   position: absolute;
   left: 30px;
   bottom: 20px;
+  height: 80px;
+  width: 60px;
 }
 
 .profession {
@@ -61,4 +63,6 @@ h2 {
   position: absolute;
   right: 30px;
   top: 20px;
+  height: 80px;
+  width: 80px;
 }
