--- a/css/styles.css
+++ b/css/styles.css
@@ -13,8 +13,8 @@ body {
 }
 
 h1 {
-  width: 20%;
   margin: 0 auto;
+  font-size: 3, 125em;
   font-family: 'Sacramento', fantasy, sans-serif;
 }
 
@@ -31,15 +31,10 @@ h1 {
   width: 60px;
 }
 
-.profession {
-  color: #ffc93c;
-  font-size: 18px;
-  font-family: fantasy, sans-serif;
-}
 
 h2 {
   color: #ffc93c;
-  font-size: 18px;
+  font-size: 2.5rem;
   font-family: fantasy, sans-serif;
 }
 
