--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,6 @@ h1 {
   width: 60px;
 }
 
-
 h2 {
   color: #ffc93c;
   font-size: 2.5rem;
@@ -61,3 +60,13 @@ h2 {
   height: 75px;
   width: 75px;
 }
+
+.logo-social-media {
+  height: 40px;
+  width: 40px;
+}
+
+.footer-link {
+  text-decoration: none;
+}
+
