--- a/css/styles.css
+++ b/css/styles.css
@@ -48,9 +48,16 @@ h2 {
   width: 40px;
 }
 
-.image-row {
-  height: 80px;
-  width: 80px;
+.image-row-experience {
+  width: 25%;
+  float: left;
+  margin-right: 30px;
+}
+
+.image-row-projects {
+  width: 25%;
+  float: right;
+  margin-left: 30px;
 }
 
 #logo-cloud {
@@ -70,3 +77,23 @@ h2 {
   text-decoration: none;
 }
 
+.skill-row {
+  width: 50%;
+  margin: 100px auto 100px auto;
+  text-align: left;
+  line-height: 2;
+}
+
+h3 {
+  color: #318fb5;
+}
+
+hr {
+  border-width: 4px;
+  border-style: dotted;
+  border-top: 0px;
+  margin-left: 48%;
+  margin-right:48%;
+  margin-top: 5%;
+  border-color: #318fb5;
+}
