--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0px 0px 0px;
+  margin: 0 0 0 0;
   text-align: center;
   font-family: fantasy, sans-serif;
 }
@@ -96,4 +96,11 @@ hr {
   margin-right:48%;
   margin-top: 5%;
   border-color: #318fb5;
+}
+
+.bottom-container {
+  background-color: #1b262c;
+  color: white;
+  padding-top: 10px ;
+  margin-bottom: 0;
 }
