Change font-family of body

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,8 @@
 body {
   margin: 0 0 0 0;
   text-align: center;
-  font-family: fantasy, sans-serif;
+  font-family: 'Merriweather Sans', sans-serif;
+
 }
 
 .top-container {
