--- a/css/styles.css
+++ b/css/styles.css
@@ -93,9 +93,8 @@ hr {
   border-width: 4px;
   border-style: dotted;
   border-top: 0px;
-  margin-left: 48%;
-  margin-right:48%;
-  margin-top: 5%;
+  margin: 5% auto;
+  width: 5%;
   border-color: #318fb5;
 }
 
