--- a/css/styles.css
+++ b/css/styles.css
@@ -107,7 +107,6 @@ hr {
 
 a:hover {
   opacity: 0.9;
-
 }
 
 #text-copyright {
@@ -115,7 +114,7 @@ a:hover {
 }
 
 #curly-brace-close {
-color: #318fb5;
+  color: #318fb5;
 }
 
 #curly-brace-open {
@@ -128,3 +127,24 @@ color: #318fb5;
   top: 50%;
   left: 100%;
 }
+
+.enterprises-logo {
+  width: 10%;
+  padding: 20px;
+}
+
+.kaibee {
+  border-radius: 40%;
+  width: 10%;
+  height: 5%;
+  margin: 0 20px;
+}
+
+#xx {
+  background-color: whitesmoke;
+  margin-left: 30%;
+  margin-right: 1%;
+  text-align: center;
+}
+
+
