--- a/css/styles.css
+++ b/css/styles.css
@@ -133,9 +133,9 @@ a:hover {
   padding: 20px;
 }
 
-.kaibee {
+.kaibee,.lcl {
   border-radius: 40%;
-  width: 10%;
+  width: 21%;
   height: 5%;
   margin: 0 20px;
 }
